[GREEN] implemented JpaRepository